--- a/src/app/pages/login/login.scss
+++ b/src/app/pages/login/login.scss
@@ -1,8 +1,14 @@
+@use '@angular/material' as mat;
 :host{
   width: 100%;
   height: 100%;
   display: grid;
   place-items: center;
+
+// Customize the entire app. Change :root to your selector if you want to scope the styles.
+  @include mat.progress-spinner-overrides((
+    active-indicator-color: orange,
+  ));
 }
 
 .example-form {
@@ -12,7 +18,7 @@
   display: flex;
   flex-direction: column;
   gap: 12px;
-  border: 1px solid var(--mat-sys-outline);
+  border: 0px solid var(--mat-sys-outline);
   background-color: var(--mat-sys-surface);
   border-radius: 12px;
   padding: 32px;
@@ -21,4 +27,9 @@
 
 .example-full-width {
   width: 100%;
+}
+
+.sign-in{
+  display: flex;
+  flex-direction: row;
 }
