--- a/src/app/components/reusable/charts/charts.html
+++ b/src/app/components/reusable/charts/charts.html
@@ -1,12 +1,25 @@
-<ngx-charts-bar-vertical
-              [view]="view"
-              [results]="single"
-              [gradient]="gradient"
-              [xAxis]="showXAxis"
-              [yAxis]="showYAxis"
-              [legend]="showLegend"
-              [showXAxisLabel]="showXAxisLabel"
-              [showYAxisLabel]="showYAxisLabel"
-              [xAxisLabel]="xAxisLabel"
-              [yAxisLabel]="yAxisLabel">
-</ngx-charts-bar-vertical>
+<mat-drawer-container>
+  <mat-drawer #drawer position="end" mode="over">
+    <app-chart-settings />
+  </mat-drawer>
+  <mat-drawer-content>
+    <mat-toolbar>
+      <span class="spacer"></span>
+      <button mat-icon-button (click)="drawer.toggle()">
+        <mat-icon>display_settings</mat-icon>
+      </button>
+    </mat-toolbar>
+      <ngx-charts-bar-vertical
+                    [view]="view"
+                    [results]="single"
+                    [gradient]="gradient()"
+                    [xAxis]="showXAxis()"
+                    [yAxis]="showYAxis()"
+                    [legend]="showLegend()"
+                    [showXAxisLabel]="showXAxisLabel()"
+                    [showYAxisLabel]="showYAxisLabel()"
+                    [xAxisLabel]="xAxisLabel()"
+                    [yAxisLabel]="yAxisLabel()">
+      </ngx-charts-bar-vertical>
+  </mat-drawer-content>
+</mat-drawer-container>
