added illustration components

--- a/src/app/components/dashboard/dashboard.html
+++ b/src/app/components/dashboard/dashboard.html
@@ -1,1 +1,5 @@
-<app-sale-graph />
+<mat-grid-list cols="4" rowHeight="500px">
+  <mat-grid-tile colspan="2">
+    <app-sale-graph />
+  </mat-grid-tile>
+</mat-grid-list>
