--- a/src/app/components/reusable/charts/charts.html
+++ b/src/app/components/reusable/charts/charts.html
@@ -1,7 +1,7 @@
 <div class="container">
   <mat-drawer-container [hasBackdrop]="false">
   <mat-drawer #drawer position="end" mode="over">
-    <mat-toolbar>
+    <mat-toolbar class="drawer-toolbar">
       <span class="spacer"></span>
       <button mat-icon-button (click)="drawer.toggle()">
         <mat-icon>close</mat-icon>
