added no-data illustration

--- a/src/app/pages/landing/landing.html
+++ b/src/app/pages/landing/landing.html
@@ -6,6 +6,7 @@
       <!-- <app-server-error></app-server-error> -->
        <!-- <app-unauthorized></app-unauthorized> -->
         <!-- <app-forbidden></app-forbidden> -->
-         <app-bad-request></app-bad-request>
+         <!-- <app-bad-request></app-bad-request> -->
+          <!-- <app-no-data></app-no-data> -->
   </div>
 </app-body>
