routing and guard first implementation

--- a/src/app/components/nav-list/nav-list.html
+++ b/src/app/components/nav-list/nav-list.html
@@ -1,11 +1,11 @@
 <nav class="nav-menu">
     <ul>
-      <li class="active">
+      <li routerLink="/dashboard" routerLinkActive="active">
         <mat-icon>dashboard</mat-icon>
         <span>Dashboard</span>
       </li>
 
-      <li>
+      <li routerLink="/inventory" routerLinkActive="active">
         <mat-icon>inventory</mat-icon>
         <span>Inventory</span>
       </li>
