--- a/src/app/pages/landing/landing.html
+++ b/src/app/pages/landing/landing.html
@@ -1,12 +1,6 @@
 <app-header />
 <app-body>
   <div class="main-container">
-    <!-- <app-dashboard /> -->
-     <!-- <app-not-found></app-not-found> -->
-      <!-- <app-server-error></app-server-error> -->
-       <!-- <app-unauthorized></app-unauthorized> -->
-        <!-- <app-forbidden></app-forbidden> -->
-         <!-- <app-bad-request></app-bad-request> -->
-          <!-- <app-no-data></app-no-data> -->
+    <router-outlet />
   </div>
 </app-body>
