updated navlist component with rout links

--- a/src/app/components/nav-list/nav-list.html
+++ b/src/app/components/nav-list/nav-list.html
@@ -10,22 +10,22 @@
         <span>Inventory</span>
       </li>
 
-      <li>
+      <li routerLink="/orders" routerLinkActive="active">
         <mat-icon>shopping_basket</mat-icon>
         <span>Orders</span>
       </li>
 
-      <li>
+      <li routerLink="/Customers" routerLinkActive="active">
         <mat-icon>group</mat-icon>
         <span>Customers</span>
       </li>
 
-      <li>
+      <li routerLink="/reports" routerLinkActive="active">
         <mat-icon>report</mat-icon>
         <span>Reports</span>
       </li>
 
-      <li>
+      <li routerLink="/settings" routerLinkActive="active">
         <mat-icon>settings</mat-icon>
         <span>Settings</span>
       </li>
